<resources>
    <string name="locale">en</string>
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=com.lolo.io.onelist</string>
    <string name="empty" translatable="false"/>
    <string name="item_name">Item Name</string>
    <string name="list_title">List name</string>
    <string name="delete_list_forever_warning">This will delete the list and all the items it contains. Are you sure you want to delete this list ? (this can\'t be undone)</string>
    <string name="list_default_name">My List</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="warning">Warning</string>
    <string name="clear_list">Just clear list</string>
    <string name="expand_item">Expand Item</string>
    <string name="delete_list">Delete List</string>
    <string name="edit_list">Edit List</string>
    <string name="add_list">Add List</string>
    <string name="add">Add</string>
    <string name="clear_comment">Clear comment</string>
    <string name="add_comment">Add comment</string>
    <string name="change_list_location">Change list storage folder</string>
    <string name="app_private_storage">App private storage</string>
    <string name="choose_folder">Choose folder …</string>
    <string name="more_options">more options</string>
    <string name="import_from_file">Import</string>
    <string name="warning_new_file">⚠ New file created for this list, you might want to delete the former one manually.</string>
    <string name="list_created_with_one1ist">List created with 1List.</string>
    <string name="settings">Settings</string>
    <string name="list_added">The list %s has been added to your lists !</string>
    <string name="list_copied">The list %s has been copied into your lists !</string>
    <string name="list_already_in_your_lists">This list is already in your lists.</string>
    <string name="error_opening_file">Error while opening list file.</string>
    <string name="error_opening_filepath">Error while getting your list from %s. Displaying cached one instead.</string>
    <string name="error_saving_to_path">Error while saving your list to %s</string>
    <string name="file_deleted">File deleted.</string>
    <string name="error_deleting_list_file">Error while deleting list file.</string>
    <string name="also_delete_file">Also delete file on the filesystem</string>
    <string name="show_menu">Show menu</string>
    <string name="storage">Storage</string>
    <string name="personalization">Personalization</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="default_storage_folder">Default storage folder</string>
    <string name="show_last_release_note">Show last release note</string>
    <string name="help">Help</string>
    <string name="changeFolderHelp">Concurrent modifications of files are not properly handled in 1List. New content will overwrite the file. Be sure you refresh your list before editing it if you are using a shared file. (Pull the list down to refresh it)</string>
    <string name="not_a_1list_file">The selected file is not a .1list.json file.</string>
    <string name="ok_with_tick">✓ OK</string>
    <string name="storage_chooser_select_label">Select</string>
    <string name="storage_chooser_create_label">Create</string>
    <string name="storage_chooser_new_folder_label">New Folder</string>
    <string name="storage_chooser_cancel_label">Cancel</string>
    <string name="storage_chooser_overview_heading">Storage Devices</string>
    <string name="storage_chooser_internal_storage_text">Internal Storage</string>
    <string name="storage_chooser_free_space_text">%s free</string>
    <string name="storage_chooser_folder_created_toast_text">Folder Created</string>
    <string name="storage_chooser_folder_error_toast_text">Error occurred while creating folder. Try again.</string>
    <string name="storage_chooser_text_field_hint_text">Folder Name</string>
    <string name="storage_chooser_text_field_error_text">Empty Folder Name</string>
    <string name="force_update_storage">Copy all lists to default storage</string>
    <string name="force_update_storage_summary">Each list has its own path, e.g., imported lists stay where they are. Clicking this button will create a copy of all currently existing lists into the selected default storage folder</string>
    <string name="share_list">Share this list</string>
    <string name="share_all_lists">Share all lists</string>
    <string name="share_markdown">Share as markdown</string>
    <string name="other">Other</string>
    <string name="item_comment">Task Comment</string>
    <string name="move_to_list">Move to list</string>
    <string name="add_items_to_bottom">Add items to the bottom</string>
    <string name="add_items_to_bottom_summary">... instead of the top of the list, as is the default.</string>
    <string name="done_items_to_bottom">Move done items to the bottom</string>
    <string name="done_items_to_bottom_summary">If disabled, done items will stay at the same position.</string>
    <string name="dialog_confirm_force_storage_title">Confirm force storage update</string>
    <string name="dialog_confirm_force_storage_message">This will copy all currently open lists into the default storage and then use these copies in the future, are you sure?</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
</resources>
