<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_borders_primary"
    android:orientation="vertical"
    android:padding="2dp">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight">


        <ImageView
            android:id="@+id/warningImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/warning"
            android:src="@android:drawable/stat_sys_warning"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/deleteListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/warningImg"
            android:layout_toRightOf="@id/warningImg"
            android:gravity="center"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/deleteListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:paddingBottom="?android:attr/listPreferredItemPaddingRight"
        android:text="@string/delete_list_forever_warning"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/deleteFileCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteListText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:checked="true"
        app:buttonCompat="@null"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:text="@string/also_delete_file"
        android:textStyle="normal|italic"
        tools:ignore="RtlSymmetry" />


    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/deleteFileCb"
        android:background="@color/material_gray_100" />


    <ImageButton
        android:id="@+id/validateDeleteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:contentDescription="@string/validate"
        android:padding="10dp"
        android:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_check_black_24dp" />

    <ImageButton
        android:id="@+id/cancelDeleteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_toStartOf="@id/validateDeleteList"
        android:layout_toLeftOf="@id/validateDeleteList"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/cancel"
        android:padding="10dp"
        android:tint="@color/colorAccentLight"
        app:srcCompat="@drawable/ic_cancel_black_24dp" />

    <TextView
        android:id="@+id/clearList"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@id/separator"
        android:layout_alignBottom="@id/validateDeleteList"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_clear_all_24dp"
        android:drawableLeft="@drawable/ic_clear_all_24dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:text="@string/clear_list"
        android:textColor="@color/colorAccentLight"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>