<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_borders_primary"
    android:orientation="vertical"
    android:padding="2dp">

    <EditText
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:hint="@string/list_title"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/listTitle"
        android:background="@color/material_gray_100" />

    <ImageButton
        android:id="@+id/validateEditList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_alignParentEnd="true"
        android:background="@color/transparent"
        android:padding="10dp"
        android:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/validate" />

    <ImageButton
        android:id="@+id/cancelEditList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_toLeftOf="@id/validateEditList"
        android:background="@color/transparent"
        android:padding="10dp"
        android:tint="@color/colorAccentLight"
        app:srcCompat="@drawable/ic_clear_black_24dp"
        android:layout_toStartOf="@id/validateEditList"
        android:contentDescription="@string/cancel" />

</RelativeLayout>