<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_borders_primary"
    android:orientation="vertical"
    android:paddingStart="2dp"
    android:paddingLeft="2dp"
    android:paddingEnd="2dp"
    android:paddingRight="2dp">

    <TextView
        android:id="@+id/listPathTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingTop="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:paddingBottom="?android:attr/listPreferredItemPaddingRight"
        android:text="@string/change_list_location"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_gray_100"
        app:layout_constraintTop_toBottomOf="@+id/listPathTitle"
        tools:layout_editor_absoluteX="10dp" />


    <Button
        android:id="@+id/appPrivateStorageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_storage_black_24dp"
        app:drawableLeftCompat="@drawable/ic_storage_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingTop="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:paddingBottom="?android:attr/listPreferredItemPaddingRight"
        android:text="@string/app_private_storage"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <Button
        android:id="@+id/chooseFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_folder_black_24dp"
        app:drawableLeftCompat="@drawable/ic_folder_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingTop="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:paddingBottom="?android:attr/listPreferredItemPaddingRight"
        android:text="@string/choose_folder"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appPrivateStorageButton" />


    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_gray_100"
        app:layout_constraintTop_toBottomOf="@+id/chooseFolderButton"
        tools:layout_editor_absoluteX="2dp" />

    <ImageButton
        android:id="@+id/helpChangePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/help"
        android:padding="10dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2"
        app:srcCompat="@drawable/ic_help_outline_black_24dp" />

    <ImageButton
        android:id="@+id/cancelChangePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/cancel"
        android:padding="10dp"
        android:tint="@color/colorAccentLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2"
        app:srcCompat="@drawable/ic_cancel_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>