<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_borders_primary"
    android:orientation="vertical"
    android:padding="2dp">

    <EditText
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_bullet_outline"
        android:drawableLeft="@drawable/ic_bullet_outline"
        android:drawablePadding="5dp"
        android:hint="@string/item_name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:ignore="UnusedAttribute" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/item_title"
        android:background="@color/list_seperator" />

    <EditText
        android:id="@+id/item_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:background="@null"
        android:drawableStart="@drawable/ic_more_horizontal_accent_light_18dp"
        android:drawableLeft="@drawable/ic_more_horizontal_accent_light_18dp"
        android:drawablePadding="5dp"
        android:hint="@string/item_comment"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:textStyle="italic"
        tools:ignore="LabelFor,UnusedAttribute" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/item_comment"
        android:background="@color/list_seperator" />

    <TextView
        android:id="@+id/item_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator2"
        android:layout_marginTop="6dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:text="@string/move_to_list"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/item_list_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator2"
        android:layout_toRightOf="@id/item_list_text"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:text="Spinner"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/item_list_text"
        android:background="@color/list_seperator" />

    <ImageButton
        android:id="@+id/validateEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/validate"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_check_black_24dp"
        app:tint="@color/colorPrimary" />

    <ImageButton
        android:id="@+id/cancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator3"
        android:layout_toStartOf="@id/validateEdit"
        android:layout_toLeftOf="@id/validateEdit"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/cancel"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:tint="@color/colorAccentLight"
        app:srcCompat="@drawable/ic_cancel_black_24dp" />

</RelativeLayout>